--- a/web_site/journal.html
+++ b/web_site/journal.html
@@ -1,8 +1,8 @@
-c<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>V's Journal</title>
+	<title>Khushnidjon's Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<!-- This links to a stylesheet that gives basic formatting to your page; you do not need to modify this. -->
 	<link rel="stylesheet" type="text/css" href="journal_basic.css" title="style" />
@@ -12,32 +12,48 @@ c<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11
 </head>
 
 <body>
+	<div class="whole_box">
+		<div class="header">
+			<h1 id="annoying">Khushnidjon's Journal</h1>
+			<h2 id="annoying" class="header_topic">So perfect and so clean</h2>
+		</div>
+		<div class="links">
+			<h1 id="annoying">Friends</h1>
+			<ul>
+				<li id="annoying"><a href="http://www.cs.washington.edu/education/courses/cse190m/CurrentQtr/staff.shtml">190m Buddie</a></li>
+				<li id="annoying"><a href="http://www.willsmith.net/">Big Will</a></li>
+				<li id="annoying"><a href="http://youtube.com/watch?v=mZHoHaAYHq8" title="Conan the Library">Conan the Library</a></li>
+			</ul>
+		</div>
+		<div class="containers">
+			<h2 id="annoying">
+				<span id="date">04/09/08:</span> Spatulas
+			</h2>
+			<p id="annoying">
+				<img id="annoying" src="images/spatula.gif" alt="Much-needed spatula" />
+			</p>
 
-	<h1>Khushnidjon's Journal</h1>
-	<h2>So nothing and so clean</h2>
+			<p id="annoying">
+				Yesterday I went to the store and got some much-needed <a id="annoying" href="http://www.youtube.com/watch?v=2XbCWmY0eqY">spatulas</a>! (What better way to say I love myself than to buy myself a spatula?)
+			</p>
+		</div>
+		<div class="containers">
+			<h2 id="annoying">
+				<span id="date">04/08/08:</span> Cookie Monster Cupcakes
+			</h2>
+			<p id="annoying">
+				<img src="images/cookiemonster.jpg" alt="Cookie Monster: in cupcake form!" />
+			</p>
 
-	<h2>04/09/08: Spatulas</h2>
-	<p>
-		<img src="images/spatula.gif" alt="Much-needed spatula" />
-	</p>
-
-	<p>
-		Yesterday I went to the store and got some much-needed <a href="http://www.youtube.com/watch?v=2XbCWmY0eqY">spatulas</a>! (What better way to say I love myself than to buy myself a spatula?)
-	</p>
-
-	<h2>04/08/08: Cookie Monster Cupcakes</h2>
-	<p>
-		<img src="images/cookiemonster.jpg" alt="Cookie Monster: in cupcake form!" />
-	</p>
-
-	<p>
-		My favorite cartoon character is Cookie Monster, and my favorite dessert is cupcakes, so Cookie Monster cupcakes are the best of both worlds.
-	</p>
-	
-	<p>
-		Did you know? Cookie Monster once said, <q>Sometimes me think what is love, and then me think love is what last cookie is for. Me give up the last cookie for you.</q> I wonder if the same applies for cupcakes? (If so, I don't think I can ever love ANYONE!)
-	</p>
-	
+			<p id="annoying">
+				My favorite cartoon character is Cookie Monster, and my favorite dessert is cupcakes, so Cookie Monster cupcakes are the best of both worlds.
+			</p>
+			
+			<p id="annoying">
+				Did you know? Cookie Monster once said, <q>Sometimes me think what is love, and then me think love is what last cookie is for. Me give up the last cookie for you.</q> I wonder if the same applies for cupcakes? (If so, I don't think I can ever love ANYONE!)
+			</p>
+		</div>
+	</div>
 </body>
 
 </html>
