another title changed

--- a/web_site/journal.html
+++ b/web_site/journal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+c<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -13,8 +13,8 @@
 
 <body>
 
-	<h1>Victoria's Journal</h1>
-	<h2>So fresh and so clean</h2>
+	<h1>Khushnidjon's Journal</h1>
+	<h2>So nothing and so clean</h2>
 
 	<h2>04/09/08: Spatulas</h2>
 	<p>
