fully completed lab2

--- a/web_site/journal.html
+++ b/web_site/journal.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
 	<title>Khushnidjon's Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -10,12 +9,11 @@
 	<!-- This is linking to your stylesheet, journal_layout.css -->
 	<link rel="stylesheet" type="text/css" href="journal_layout.css" title="style" />
 </head>
-
 <body>
 	<div class="whole_box">
 		<div class="header">
 			<h1 id="annoying">Khushnidjon's Journal</h1>
-			<h2 id="annoying" class="header_topic">So perfect and so clean</h2>
+			<h2 id="annoying" class="header_topic">So nice and clean</h2>
 		</div>
 		<div class="links">
 			<h1 id="annoying">Friends</h1>
@@ -32,9 +30,13 @@
 			<p id="annoying">
 				<img id="annoying" src="images/spatula.gif" alt="Much-needed spatula" />
 			</p>
-
 			<p id="annoying">
-				Yesterday I went to the store and got some much-needed <a id="annoying" href="http://www.youtube.com/watch?v=2XbCWmY0eqY">spatulas</a>! (What better way to say I love myself than to buy myself a spatula?)
+				Yesterday I went to the store and got some much-needed <a id="annoying" href="http://www.youtube.com/watch?v=2XbCWmY0eqY">spatulas</a>! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 		</div>
 		<div class="containers">
@@ -44,16 +46,13 @@
 			<p id="annoying">
 				<img src="images/cookiemonster.jpg" alt="Cookie Monster: in cupcake form!" />
 			</p>
-
 			<p id="annoying">
 				My favorite cartoon character is Cookie Monster, and my favorite dessert is cupcakes, so Cookie Monster cupcakes are the best of both worlds.
-			</p>
-			
+			</p>	
 			<p id="annoying">
 				Did you know? Cookie Monster once said, <q>Sometimes me think what is love, and then me think love is what last cookie is for. Me give up the last cookie for you.</q> I wonder if the same applies for cupcakes? (If so, I don't think I can ever love ANYONE!)
 			</p>
 		</div>
 	</div>
 </body>
-
 </html>
